--- a/other/restrict_secrets_by_label/resource.yaml
+++ b/other/restrict_secrets_by_label/resource.yaml
@@ -28,7 +28,7 @@ metadata:
 spec:
   containers:
   - name: test-container
-    image: k8s.gcr.io/busybox
+    image: registry.k8s.io/busybox
     command: [ "/bin/sh", "-c", "env" ]
     envFrom:
     - secretRef:
@@ -46,7 +46,7 @@ spec:
       secretName: mysecret
   containers:
   - name: test-container
-    image: k8s.gcr.io/busybox
+    image: registry.k8s.io/busybox
     volumeMounts:
     - name: secret-volume
       readOnly: true
