--- a/other/disallow_all_secrets/resource.yaml
+++ b/other/disallow_all_secrets/resource.yaml
@@ -27,7 +27,7 @@ metadata:
 spec:
   containers:
   - name: test-container
-    image: k8s.gcr.io/busybox
+    image: registry.k8s.io/busybox
     command: [ "/bin/sh", "-c", "env" ]
     envFrom:
     - secretRef:
@@ -45,7 +45,7 @@ spec:
       secretName: mysecret
   containers:
   - name: test-container
-    image: k8s.gcr.io/busybox
+    image: registry.k8s.io/busybox
     volumeMounts:
     - name: secret-volume
       readOnly: true
