--- a/other/disallow_secrets_from_env_vars/resource.yaml
+++ b/other/disallow_secrets_from_env_vars/resource.yaml
@@ -27,7 +27,7 @@ metadata:
 spec:
   containers:
   - name: test-container
-    image: k8s.gcr.io/busybox
+    image: registry.k8s.io/busybox
     command: [ "/bin/sh", "-c", "env" ]
     envFrom:
     - secretRef:
