--- a/other/ensure_probes_different/resource.yaml
+++ b/other/ensure_probes_different/resource.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: goproxy
-        image: k8s.gcr.io/goproxy:0.1
+        image: registry.k8s.io/goproxy:0.1
         ports:
         - containerPort: 8080
         readinessProbe:
@@ -51,7 +51,7 @@ spec:
     spec:
       containers:
       - name: goproxy
-        image: k8s.gcr.io/goproxy:0.1
+        image: registry.k8s.io/goproxy:0.1
         ports:
         - containerPort: 8080
         readinessProbe:
