Fix image path for prepend_image_registry policy
Fix the image path for the prepend-registry-initcontainers rule so that
it uses the image path for the path instead of the image name. We also
update the resources used in the tests to use an image containing a
path.

Resolves: #509

Signed-off-by: Michael Barker <michael.barker.84@gmail.com>

--- a/other/prepend_image_registry/patchedResource.yaml
+++ b/other/prepend_image_registry/patchedResource.yaml
@@ -5,12 +5,12 @@ metadata:
 spec:
   automountServiceAccountToken: false
   initContainers:
-  - name: alpine
-    image: registry.io/alpine:latest
+  - name: kyverno
+    image: registry.io/kyverno/kyverno:latest
   - name: busybox
     image: registry.io/busybox:1.28
   containers:
-  - name: nginx
-    image: registry.io/nginx:1.2.3
+  - name: kyverno
+    image: registry.io/kyverno/kyverno:1.2.3
   - name: redis
     image: registry.io/redis:latest
