--- a/other/prepend_image_registry/patchedResourceWithoutInitContainer.yaml
+++ b/other/prepend_image_registry/patchedResourceWithoutInitContainer.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   automountServiceAccountToken: false
   containers:
-  - name: nginx
-    image: nginx:1.2.3
+  - name: kyverno
+    image: kyverno/kyverno:1.2.3
   - name: redis
     image: redis:latest
