--- a/other/prepend_image_registry/failpatchedResource.yaml
+++ b/other/prepend_image_registry/failpatchedResource.yaml
@@ -5,12 +5,12 @@ metadata:
 spec:
   automountServiceAccountToken: false
   initContainers:
-  - name: alpine
-    image: alpine:latest
+  - name: kyverno
+    image: kyverno/kyverno:latest
   - name: busybox
     image: busybox:1.28
   containers:
-  - name: nginx
-    image: nginx:1.2.3
+  - name: kyverno
+    image: kyverno/kyverno:1.2.3
   - name: redis
     image: redis:latest
