added negative testing
Signed-off-by: Jimmy Ray <jimmyray@amazon.com>

--- a/other/restrict_deprecated_registry/kyverno-test.yaml
+++ b/other/restrict_deprecated_registry/kyverno-test.yaml
@@ -6,7 +6,13 @@ resources:
 results:
   - policy: restrict-deprecated-registry
     rule: restrict-deprecated-registry
-    resource: test-pod
+    resource: test-pod-bad
     kind: Pod
     namespace: policy-test
     result: fail
+  - policy: restrict-deprecated-registry
+    rule: restrict-deprecated-registry
+    resource: test-pod-good
+    kind: Pod
+    namespace: policy-test
+    result: pass
