prevent spec.nodeName warnings for running pods
we only want to prevent setting when the pod is created

Signed-off-by: fadecore <outbreak86@hotmail.com>

--- a/other/restrict_node_selection/restrict_node_selection.yaml
+++ b/other/restrict_node_selection/restrict_node_selection.yaml
@@ -34,6 +34,12 @@ spec:
       - resources:
           kinds:
           - Pod
+    preconditions:
+      all:
+      - key: "{{request.operation || 'BACKGROUND'}}"
+        operator: Equal
+        value:
+        - CREATE
     validate:
       message: Setting the nodeName field is prohibited.
       pattern:
