--- a/other/restrict_node_selection/restrict_node_selection.yaml
+++ b/other/restrict_node_selection/restrict_node_selection.yaml
@@ -34,6 +34,11 @@ spec:
       - resources:
           kinds:
           - Pod
+    preconditions:
+      all:
+      - key: "{{request.operation || 'BACKGROUND'}}"
+        operator: Equals
+        value: CREATE
     validate:
       message: Setting the nodeName field is prohibited.
       pattern:
