--- a/other/restrict_node_selection/restrict_node_selection.yaml
+++ b/other/restrict_node_selection/restrict_node_selection.yaml
@@ -12,10 +12,12 @@ metadata:
       for new Pods. Users who have access to set certain fields in a Pod spec
       may sidestep this logic which in many cases is undesirable. This policy
       prevents users from targeting specific Nodes for scheduling of Pods by
-      prohibiting the use of the `nodeSelector` and `nodeName` fields.
+      prohibiting the use of the `nodeSelector` and `nodeName` fields. Note that
+      this policy is only designed to work on initial creation and not in background
+      mode.
 spec:
   validationFailureAction: audit
-  background: true
+  background: false
   rules:
   - name: restrict-nodeselector
     match:
@@ -23,6 +25,11 @@ spec:
       - resources:
           kinds:
           - Pod
+    preconditions:
+      all:
+      - key: "{{request.operation || 'BACKGROUND'}}"
+        operator: Equals
+        value: CREATE
     validate:
       message: Setting the nodeSelector field is prohibited.
       pattern:
