--- a/velero/backup-all-volumes/backup-all-volumes.yaml
+++ b/velero/backup-all-volumes/backup-all-volumes.yaml
@@ -6,7 +6,7 @@ metadata:
     policies.kyverno.io/title: Backup All Volumes
     policies.kyverno.io/category: Velero
     policies.kyverno.io/severity: medium
-    policies.kyverno.io/subject: Pod
+    policies.kyverno.io/subject: Pod, Annotation
     kyverno.io/kyverno-version: 1.9.2
     kyverno.io/kubernetes-version: "1.25"
     policies.kyverno.io/description: >-
