--- a/other/add-default-resources/kyverno-test.yaml
+++ b/other/add-default-resources/kyverno-test.yaml
@@ -16,7 +16,7 @@ results:
     resource: nginx-demo2
     patchedResource: patchedResource2.yaml
     kind: Pod
-    result: skip
+    result: pass
   - policy: add-default-resources
     rule: add-default-requests
     resource: nginx-demo3
