--- a/other/a/add-certificates-volume/99-delete.yaml
+++ b/other/a/add-certificates-volume/99-delete.yaml
@@ -1,5 +1,6 @@
 apiVersion: kuttl.dev/v1beta1
 kind: TestStep
 commands:
-  - command: kubectl delete deployments --all --force --grace-period=0 -n other-certvol-ns
-  - command: kubectl delete pods --all --force --grace-period=0 -n other-certvol-ns
+- command: kubectl delete all --all --force --grace-period=0 -n other-certvol-ns
+- command: sleep 20
+- command: kubectl delete pods --all --force --grace-period=0 -n other-certvol-ns
