--- a/other/rec-req/require-deployments-have-multiple-replicas/kyverno-test.yaml
+++ b/other/rec-req/require-deployments-have-multiple-replicas/kyverno-test.yaml
@@ -9,8 +9,8 @@ results:
     resource: mydeploy
     kind: Deployment
     result: pass
-  - policy: deployment-has-multiple-replicas
-    rule: deployment-has-multiple-replicas
-    resource: myapp-pod
-    kind: Pod
-    result: skip
+  # - policy: deployment-has-multiple-replicas
+  #   rule: deployment-has-multiple-replicas
+  #   resource: myapp-pod
+  #   kind: Pod
+  #   result: skip
