--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,7 @@
 name: Policy Test
 
+permissions: {}
+
 on:
   push:
     branches:
@@ -9,6 +11,10 @@ on:
     branches:
       - main
       - release*
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   test:
