feat: add cri-dockerd flavor to disallow-cri-sock-mount
Signed-off-by: Spencer Koch <sp3nx0r@gmail.com>

--- a/best-practices/disallow-cri-sock-mount/disallow-cri-sock-mount.yaml
+++ b/best-practices/disallow-cri-sock-mount/disallow-cri-sock-mount.yaml
@@ -56,3 +56,16 @@ spec:
           =(volumes):
             - =(hostPath):
                 path: "!/var/run/crio.sock"
+  - name: validate-dockerd-sock-mount
+    match:
+      any:
+      - resources:
+          kinds:
+          - Pod
+    validate:
+      message: "Use of the Docker CRI socket is not allowed."
+      pattern:
+        spec:
+          =(volumes):
+            - =(hostPath):
+                path: "!/var/run/cri-dockerd.sock"
