--- a/best-practices/disallow-cri-sock-mount/02-manifests.yaml
+++ b/best-practices/disallow-cri-sock-mount/02-manifests.yaml
@@ -9,6 +9,8 @@ apply:
   shouldFail: true
 - file: pod-crio-sock.yaml
   shouldFail: true
+- file: pod-cri-dockerd-sock.yaml
+  shouldFail: true
 - file: pod-emptydir-vol.yaml
   shouldFail: false
 - file: pod-no-volumes.yaml
