fix: invalid kuttl test step
Signed-off-by: Charles-Edouard Brétéché <charles.edouard@nirmata.com>

--- a/other/m-q/prepend-image-registry/02-manifests.yaml
+++ b/other/m-q/prepend-image-registry/02-manifests.yaml
@@ -8,6 +8,6 @@ apply:
 assert:
 - patchedResource.yaml
 - pods-patched.yaml
-errors:
+error:
 - patchedResourceWithoutInitContainer.yaml
 - failpatchedResource.yaml
