--- a/best-practices/disallow-default-namespace/ds-default.yaml
+++ b/best-practices/disallow-default-namespace/ds-default.yaml
@@ -13,7 +13,7 @@ spec:
         name: good-daemonset
     spec:
       containers:
-      - image: busybox:v1.35
+      - image: busybox:1.35
         name: busybox
         command:
         - "sleep"
