--- a/best-practices/disallow-default-namespace/job-default.yaml
+++ b/best-practices/disallow-default-namespace/job-default.yaml
@@ -7,7 +7,7 @@ spec:
   template:
     spec:
       containers:
-      - image: busybox:v1.35
+      - image: busybox:1.35
         name: busybox
         command:
         - "sleep"
