--- a/best-practices/disallow-default-namespace/pod-default.yaml
+++ b/best-practices/disallow-default-namespace/pod-default.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   containers:
   - name: busybox
-    image: "busybox:v1.35"
+    image: "busybox:1.35"
     command:
     - "sleep"
     - "3000"
