--- a/best-practices/disallow-helm-tiller/good-deploy.yaml
+++ b/best-practices/disallow-helm-tiller/good-deploy.yaml
@@ -15,6 +15,6 @@ spec:
         app: busybox
     spec:
       containers:
-      - image: busybox:v1.35
+      - image: busybox:1.35
         name: busybox
         command: ["sleep", "3600"]
