--- a/best-practices/disallow-helm-tiller/good-pod.yaml
+++ b/best-practices/disallow-helm-tiller/good-pod.yaml
@@ -5,6 +5,6 @@ metadata:
 spec:
   containers:
   - name: busybox
-    image: busybox:v1.35
+    image: busybox:1.35
   - name: nothelmbox
-    image: busybox:v1.35
+    image: busybox:1.35
