fix(pdb-minavailable-check): ensure correct handling of 0 replicas workloads
Signed-off-by: Erik Godding Boye <egboye@gmail.com>

--- a/other/m-q/pdb-minavailable/pdb-minavailable.yaml
+++ b/other/m-q/pdb-minavailable/pdb-minavailable.yaml
@@ -32,6 +32,9 @@ spec:
           value:
           - CREATE
           - UPDATE
+        - key: "{{ request.object.spec.replicas || `1` }}"
+          operator: GreaterThan
+          value: 0
       context:
         - name: minavailable
           apiCall:
